fixes small ui issues and text overlap in sidebars

--- a/static/css/penguin.scss
+++ b/static/css/penguin.scss
@@ -528,8 +528,8 @@ footer {
 }
 #main .magic {
   width: 100% !important;
-  // display: inline-block;
-  float: left;
+  display: inline-block;
+  float: none;
 }
 #main {
   -moz-column-count: 4;
